# GrammaticalEvolutionTools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst
docs/source/grammaticalevolutiontools/: index.rst
examples/MultiAgentProblem/: multi-agent.ipynb
examples/MultiAgentProblem/MultiAgent/: __init__.py  agent.py  grammar.py
examples/MultiAgentProblem/Simulation/: __init__.py  animation.py  grammatical_evolution.py
examples/SantaFeProblem/: santafe.ipynb
examples/SantaFeProblem/SantaFe/: __init__.py  santafe_agent.py  santafe_food.py  santafe_world.py
examples/_optimizer/: optimizer.py
examples/multi_agent/MultiAgent/: world.py
examples/multi_agent/Resources/: GRID.txt  grammar.txt
examples/santa_fe/: README.md  santafe.ipynb
examples/santa_fe/resources/: GRID.txt  grammar.txt
examples/santa_fe/src/: __init__.py  grammar.py  santafe_agent.py  santafe_food.py  santafe_world.py
src/grammaticalevolutiontools/: __init__.py
src/grammaticalevolutiontools/_base/: base_node.py  meta.py
src/grammaticalevolutiontools/_base_node/: __init__.py  base_node.py
src/grammaticalevolutiontools/agents/: __init__.py  agent.py  agent_program.py  base_agent.py
src/grammaticalevolutiontools/animation/: __init__.py  animation.py
src/grammaticalevolutiontools/evolution/: CrossOver.py  Mutation.py  __init__.py  cross_over.py
src/grammaticalevolutiontools/grammars/: __init__.py  grammar.py  grammar_node.py  node_converter.py
src/grammaticalevolutiontools/grid_based_tools/: __init__.py  grid_based_agent.py  grid_layout.py  grid_position.py  grid_world.py  grid_world_object.py  grid_world_reward.py
src/grammaticalevolutiontools/meta/: __init__.py  base_node.py
tests/: conftests.py
tests/Agents/: test_base_agent.py
tests/Grammars/: test_grammar.py  test_node_converter.py  unit_tests.py
tests/Worlds/: test_base_world.py
tests/_Base/: test_base_node.py  test_meta.py
(+117 files in other folders)
